# bu_test_on_gce

./: .env_dumy  .gitignore  README.md  UnityWebRTCClient.cs  WebRTCClient.cs  client.js  generate_cert.py  pyproject.toml  test.py  webrtc_browser_stream.py  webrtc_test.py
static/: client.js  index.html
test/: webcam.py
